--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -611,6 +611,7 @@ jobs:
   e2e-gpu-tests:
     docker:
       - image: python:3.6.9
+    parallelism: 2
     steps:
       - checkout
       - setup-python-venv:
@@ -630,9 +631,15 @@ jobs:
       - wait-for-master:
           host: ${MASTER_HOST}
       - run: sleep 20
-      - run-e2e-tests:
-          mark: "e2e_gpu"
-          master-host: ${MASTER_HOST}
+      - run: circleci tests glob "tests/integrations/**/test*.py" | circleci tests split --split-by=timings > /tmp/tests-to-run
+      - run: |
+          . /tmp/venv/bin/activate && \
+          pytest -vv -s \
+          -m "e2e_gpu" \
+          --durations=0 \
+          --master-host=${MASTER_HOST} \
+          --junit-xml=/tmp/test-results/e2e/tests.xml \
+          $(cat /tmp/tests-to-run)
       - store_test_results:
           path: /tmp/test-results/
 
@@ -640,6 +647,7 @@ jobs:
   parallel-tests:
     docker:
       - image: python:3.6.9
+    parallelism: 2
     steps:
       - checkout
       - setup-python-venv:
@@ -660,9 +668,15 @@ jobs:
       - wait-for-master:
           host: ${MASTER_HOST}
       - run: sleep 20
-      - run-e2e-tests:
-          mark: "parallel"
-          master-host: ${MASTER_HOST}
+      - run: circleci tests glob "tests/integrations/**/test*.py" | circleci tests split --split-by=timings > /tmp/tests-to-run
+      - run: |
+          . /tmp/venv/bin/activate && \
+          pytest -vv -s \
+          -m "parallel" \
+          --durations=0 \
+          --master-host=${MASTER_HOST} \
+          --junit-xml=/tmp/test-results/e2e/tests.xml \
+          $(cat /tmp/tests-to-run)
       - store_test_results:
           path: /tmp/test-results/
 
