--- a/examples/experimental/trial/detectron2/const.yaml
+++ b/examples/experimental/trial/detectron2/const.yaml
@@ -2,13 +2,9 @@ description: detectron2_const
 data:
   url: https://s3-us-west-2.amazonaws.com/determined-ai-test-data/pytorch_mnist.tar.gz
 hyperparameters:
-  learning_rate: 1.0
+  # learning_rate: 1.0
   global_batch_size: 64
-  n_filters1: 32
-  n_filters2: 64
-  dropout1: 0.25
-  dropout2: 0.5
-  model_yaml: mask_rcnn_R_50_FPN_1x.yaml
+  model_yaml: e2e_mask_rcnn_R-50-FPN_1x.yaml #mask_rcnn_R_50_FPN_1x.yaml
 searcher:
   name: single
   metric: validation_loss
@@ -16,3 +12,7 @@ searcher:
   smaller_is_better: true
 entrypoint: model_def:DetectronTrial
 max_restarts: 0
+bind_mounts:
+  - host_path: /home/ubuntu/dtrain-fsx
+    container_path: /mnt/dtrain-fsx
+    read_only: true
