--- a/examples/experimental/trial/unets_tf_keras/distributed.yaml
+++ b/examples/experimental/trial/unets_tf_keras/distributed.yaml
@@ -8,14 +8,14 @@ hyperparameters:
   learning_rate: 1e-4
   learning_rate_decay: 1e-6
   layer1_dense_size: 16
-  global_batch_size: 512 # per slot batch size = 64
+  global_batch_size: 64 # 512 # per slot batch size = 64
   OUTPUT_CHANNELS: 3
 
 searcher:
   name: single
   metric: val_accuracy
   smaller_is_better: false
-  max_steps: 230 # There are ~7400 examples (200 examples/class * 37 classes) in the training set
+  max_steps: 20 #230 # There are ~7400 examples (200 examples/class * 37 classes) in the training set
                    # We run for 20 epochs as per the Tensorflow UNet tutorial. We get 230 by:
                    # 7400 / global_batch_size / (1 batch per step) * 20 epochs
 resources:
@@ -26,3 +26,5 @@ entrypoint: model_def:UNetsTrial
 environment:
   image:
     gpu: "determinedai/environments:cuda-10.1-pytorch-1.4-tf-2.2-gpu-0.4.0"
+batches_per_step: 57
+max_restarts: 0
