--- a/examples/experimental/trial/detectron2/const.yaml
+++ b/examples/experimental/trial/detectron2/const.yaml
@@ -1,10 +1,10 @@
-description: detectron2_const_just_loss_change_imgs_8
+description: detectron2_const
 # environment:
 #     image: "katport/detectron2:2.0"
 data:
   url: https://s3-us-west-2.amazonaws.com/determined-ai-test-data/pytorch_mnist.tar.gz
 hyperparameters:
-  global_batch_size: 32
+  global_batch_size: 128
   model_yaml: mask_rcnn_R_50_FPN_noaug_1x.yaml
 searcher:
   name: single
