--- a/examples/computer_vision/efficentdet_pytorch/distributed.yaml
+++ b/examples/computer_vision/efficentdet_pytorch/distributed.yaml
@@ -1,8 +1,8 @@
 description: efficientdet_distributed
-environment:
-  image: aaron276h/pytorch-1.6
+# environment:
+#   image: aaron276h/pytorch-1.6
 hyperparameters:
-  global_batch_size: 32 #64
+  global_batch_size: 64
   root: '/mnt/data'
   dataset: coco
   model: efficientdet_d0 #tf_efficientdet_d1
@@ -16,13 +16,13 @@ hyperparameters:
   no_resume_opt: False
   mean: None
   std: None
-  interpolation: 
+  interpolation: ''
   fill_color: None
   clip_grad: 10.0
-  opt: sgd #fusedmomentum
-  opt_eps: 1e-3
+  opt: fusedmomentum
+  opt_eps: 0.001
   momentum: 0.9
-  weight_decay: 4e-5
+  weight_decay: 4e-05
   sched: cosine
   lr: 0.12
   lr_noise: 0.4 0.9
@@ -53,13 +53,13 @@ hyperparameters:
   sync_bn: true
   dist_bn: 
   seed: 42
-  log_interval: 50
+  # log_interval: 50
   recovery_interval: 0
   workers: 4
   save_images: False
-  amp: False
-  apex_amp: False
-  native_amp: False
+  amp: True
+  # apex_amp: False
+  # native_amp: False
   channels_last: False
   pin_mem: False
   no_prefetcher: False
@@ -72,19 +72,16 @@ searcher:
   name: single
   metric: val_loss
   max_length:
-      # epochs: 240
-      batches: 2
+      epochs: 300
   smaller_is_better: true
 resources:
-  slots_per_trial: 2
+  slots_per_trial: 4
 reproducibility:
   experiment_seed: 42
 min_validation_period:
-  # epochs: 1
-  batches: 100
+  epochs: 1
 entrypoint: model_def:EffDetTrial
 max_restarts: 0
 bind_mounts:
   - host_path: /home/katie/projects/data/coco
     container_path: /mnt/data
-    # read_only: True
