--- a/examples/computer_vision/efficentdet_pytorch/distributed.yaml
+++ b/examples/computer_vision/efficentdet_pytorch/distributed.yaml
@@ -50,7 +50,7 @@ hyperparameters:
   new_focal: None
   model_ema: True
   model_ema_decay: 0.9999
-  sync_bn: true
+  sync_bn: False
   dist_bn: 
   seed: 42
   # log_interval: 50
