--- a/examples/computer_vision/efficentdet_pytorch/distributed.yaml
+++ b/examples/computer_vision/efficentdet_pytorch/distributed.yaml
@@ -1,17 +1,26 @@
-description: efficientdet_distributed
+description: efficientdet_distributed_default_cycle
 # environment:
 #   image: aaron276h/pytorch-1.6
 hyperparameters:
-  global_batch_size: 64
+  global_batch_size: 88
+  min_loss_scale: 16
+  sync_bn: False
+  model_ema: True
   root: '/mnt/data'
   dataset: coco
   model: efficientdet_d0 #tf_efficientdet_d1
   redundant_bias: None
   val_skip: 0
-  num_classes: 90 # double check
+  num_classes: None
   pretrained: False
   no_pretrained_backbone: False
-  initial_checkpoint: 
+
+  model_ema_decay: 0.9999
+  initial_checkpoint: None
+  dist_bn: None
+  output: None
+
+  decay_rate: 0.1
   resume: ''
   no_resume_opt: False
   mean: None
@@ -38,7 +47,6 @@ hyperparameters:
   warmup_epochs: 5
   cooldown_epochs: 10
   patience_epochs: 10
-  decay_rate: 0.1
   color_jitter: 0.4
   aa: None
   reprob: 0.
@@ -48,25 +56,20 @@ hyperparameters:
   smoothing: None
   jit_loss: None
   new_focal: None
-  model_ema: True
-  model_ema_decay: 0.9999
-  sync_bn: False
-  dist_bn: 
   seed: 42
-  # log_interval: 50
   recovery_interval: 0
   workers: 4
   save_images: False
   amp: True
-  # apex_amp: False
-  # native_amp: False
   channels_last: False
   pin_mem: False
   no_prefetcher: False
   bench_labeler: False
-  output: 
   eval_metric: map
   tta: 0
+# optimizations:
+#    tensor_fusion_threshold: 1
+#    tensor_fusion_cycle_time: 2
 records_per_epoch: 118287
 searcher:
   name: single
@@ -80,6 +83,7 @@ reproducibility:
   experiment_seed: 42
 min_validation_period:
   epochs: 1
+  # batches: 10
 entrypoint: model_def:EffDetTrial
 max_restarts: 0
 bind_mounts:
