--- a/examples/computer_vision/efficentdet_pytorch/adaptive.yaml
+++ b/examples/computer_vision/efficentdet_pytorch/adaptive.yaml
@@ -1,10 +1,16 @@
 description: efficientdet_adaptive_loss
 hyperparameters:
   global_batch_size: 16
-  # min_loss_scale:
-  #   type: double
-  #   minval: 8
-  #   maxval: 24
+  min_loss_scale:
+    type: double
+    minval: 8
+    maxval: 64
+  epochs: 300
+  
+  sync_bn: False
+  model_ema: True
+  amp: True
+  
   root: '/mnt/data'
   dataset: coco
   model: efficientdet_d0 #tf_efficientdet_d1
@@ -13,7 +19,13 @@ hyperparameters:
   num_classes: None # double check
   pretrained: False
   no_pretrained_backbone: False
+
+  model_ema_decay: 0.9999
   initial_checkpoint: None
+  dist_bn: None
+  output: None
+
+  decay_rate: 0.1
   resume: ''
   no_resume_opt: False
   mean: None
@@ -36,8 +48,8 @@ hyperparameters:
   sched: cosine
   lr:
     type: double
-    maxval: 0.8
-    minval: 0.01
+    maxval: 0.3
+    minval: 0.001
   lr_noise: 0.4 0.9
   lr_noise_pct: 0.67
   lr_noise_std: 1.0
@@ -45,13 +57,11 @@ hyperparameters:
   lr_cycle_limit: 1
   warmup_lr: 0.0001
   min_lr: 1e-5
-  epochs: 300
   start_epoch: None
   decay_epochs: 30
   warmup_epochs: 5
   cooldown_epochs: 10
   patience_epochs: 10
-  decay_rate: 0.1
   color_jitter: 0.4
   aa: None
   reprob: 0.
@@ -61,20 +71,14 @@ hyperparameters:
   smoothing: None
   jit_loss: None
   new_focal: None
-  model_ema: True
-  model_ema_decay: 0.9999
-  sync_bn: False
-  dist_bn: ''
   seed: 42
   recovery_interval: 0
   workers: 4
   save_images: False
-  amp: True
   channels_last: False
   pin_mem: False
   no_prefetcher: False
   bench_labeler: False
-  output: None
   eval_metric: map
   tta: 0
 records_per_epoch: 118287
@@ -82,9 +86,9 @@ searcher:
   name: adaptive_asha
   metric: val_loss
   max_length:
-      epochs: 100
+      epochs: 300
   smaller_is_better: False
-  max_trials: 1000
+  max_trials: 500
   max_concurrent_trials: 4
 resources:
   slots_per_trial: 1
