--- a/examples/computer_vision/efficentdet_pytorch/adaptive.yaml
+++ b/examples/computer_vision/efficentdet_pytorch/adaptive.yaml
@@ -5,28 +5,23 @@ hyperparameters:
     type: double
     minval: 8
     maxval: 64
-  
   sync_bn: 
     type: categorical
     vals: [True, False]
   model_ema: True
   amp: True
-  epochs: 300
-  
   root: '/mnt/data'
   dataset: coco
-  model: efficientdet_d0 #tf_efficientdet_d1
+  model: efficientdet_d0
   redundant_bias: None
   val_skip: 0
-  num_classes: None # double check
+  num_classes: None
   pretrained: False
   no_pretrained_backbone: False
-
   model_ema_decay: 0.9999
   initial_checkpoint: None
   dist_bn: None
   output: None
-
   decay_rate: 0.1
   resume: ''
   no_resume_opt: False
@@ -85,6 +80,7 @@ hyperparameters:
   bench_labeler: False
   eval_metric: map
   tta: 0
+  epochs: 300 # used for LR calculations:update according to max_length
 records_per_epoch: 118287
 searcher:
   name: adaptive_asha
@@ -93,7 +89,7 @@ searcher:
       epochs: 300
   smaller_is_better: False
   max_trials: 1000
-  max_concurrent_trials: 2
+  max_concurrent_trials: 4
 resources:
   slots_per_trial: 2
 reproducibility:
