--- a/examples/computer_vision/efficentdet_pytorch/const.yaml
+++ b/examples/computer_vision/efficentdet_pytorch/const.yaml
@@ -1,6 +1,6 @@
 description: EffDetTrial_const
 hyperparameters:
-  global_batch_size: 16 #32
+  global_batch_size: 16
   min_loss_scale: 16.0
   sync_bn: False
   amp: True
@@ -10,7 +10,7 @@ hyperparameters:
   model: efficientdet_d0
   redundant_bias: None
   val_skip: 0
-  num_classes: None #90 # double check
+  num_classes: None
   pretrained: False
   no_pretrained_backbone: False
   initial_checkpoint: None
@@ -26,7 +26,7 @@ hyperparameters:
   momentum: 0.9
   weight_decay: 4e-05
   sched: cosine
-  lr: .012 #0.12
+  lr: .012
   lr_noise: 0.4 0.9
   lr_noise_pct: 0.67
   lr_noise_std: 1.0
@@ -34,7 +34,6 @@ hyperparameters:
   lr_cycle_limit: 1
   warmup_lr: 0.0001
   min_lr: 1e-5
-  epochs: 300
   start_epoch: None
   decay_epochs: 30
   warmup_epochs: 5
@@ -53,12 +52,9 @@ hyperparameters:
   model_ema_decay: 0.9999
   dist_bn: ''
   seed: 42
-  # log_interval: 50
   recovery_interval: 0
-  workers: 1 #4
+  workers: 4
   save_images: False
-  # apex_amp: False
-  # native_amp: False
   channels_last: False
   pin_mem: False
   no_prefetcher: False
@@ -66,6 +62,7 @@ hyperparameters:
   output: 
   eval_metric: map
   tta: 0
+  epochs: 300 # update according to max_length
 records_per_epoch: 118287
 searcher:
   name: single
@@ -77,12 +74,8 @@ reproducibility:
   experiment_seed: 42
 entrypoint: model_def:EffDetTrial
 min_validation_period:
-  # epochs: 1
-  batches: 10
-# min_checkpoint_period:
-#   batches: 1
+  epochs: 1
 max_restarts: 0
 bind_mounts:
   - host_path: /home/katie/projects/data/coco
     container_path: /mnt/data/
-    # read_only: True
