--- a/examples/computer_vision/detectron2/const.yaml
+++ b/examples/computer_vision/detectron2/const.yaml
@@ -1,10 +1,10 @@
-description: detectron2_const_context
+description: detectron2_const_core_install
 # environment:
 #     image: "katport/detectron2:6.0"
-data:
-  url: https://s3-us-west-2.amazonaws.com/determined-ai-test-data/pytorch_mnist.tar.gz
+# data:
+#   url: https://s3-us-west-2.amazonaws.com/determined-ai-test-data/pytorch_mnist.tar.gz
 hyperparameters:
-  global_batch_size: 8
+  global_batch_size: 8 # 16 per gpu
   model_yaml: mask_rcnn_R_50_FPN_noaug_1x.yaml
   workers: 4
   data_loc: /mnt/dtrain-fsx/detectron2/R-50.pkl
@@ -12,12 +12,12 @@ searcher:
   name: single
   metric: validation_loss
   max_length: 
-    batches: 20
+    batches: 2000
   smaller_is_better: true
 entrypoint: model_def:DetectronTrial
 max_restarts: 0
-# bind_mounts:
-#   - host_path: /home/katie/projects/detectron/detectron2/datasets
-#     container_path: /mnt/dtrain-fsx/detectron2
-#     read_only: true
+bind_mounts:
+  - host_path: /home/ubuntu/fsx/detectron2 #/home/katie/projects/detectron/detectron2/datasets
+    container_path: /mnt/dtrain-fsx/detectron2
+    read_only: true
 # min_validation_period: 20
