--- a/examples/computer_vision/detectron2/distributed.yaml
+++ b/examples/computer_vision/detectron2/distributed.yaml
@@ -1,10 +1,10 @@
 description: detectron2_dis
-environment:
-    image: "katport/detectron2:6.0"
-data:
-  url: https://s3-us-west-2.amazonaws.com/determined-ai-test-data/pytorch_mnist.tar.gz
+# environment:
+#     image: "katport/detectron2:6.0"
+# data:
+#   url: https://s3-us-west-2.amazonaws.com/determined-ai-test-data/pytorch_mnist.tar.gz
 hyperparameters:
-  global_batch_size: 32
+  global_batch_size: 128
   model_yaml: mask_rcnn_R_50_FPN_noaug_1x.yaml
   workers: 4
   data_loc: /mnt/dtrain-fsx/detectron2/R-50.pkl
@@ -16,10 +16,10 @@ searcher:
   smaller_is_better: true
 entrypoint: model_def:DetectronTrial
 max_restarts: 0
-# bind_mounts:
-#   - host_path: /home/katie/projects/detectron/detectron2/datasets
-#     container_path: /mnt/dtrain-fsx/detectron2
-    # read_only: true
+bind_mounts:
+  - host_path: /home/ubuntu/fsx/detectron2 #/home/katie/projects/detectron/detectron2/datasets
+    container_path: /mnt/dtrain-fsx/detectron2
+    read_only: true
 resources:
-  slots_per_trial: 4
+  slots_per_trial: 8
 # min_validation_period: 20
