--- a/examples/computer_vision/detectron2/const.yaml
+++ b/examples/computer_vision/detectron2/const.yaml
@@ -1,10 +1,10 @@
 description: detectron2_const_core_install
-# environment:
-#     image: "katport/detectron2:6.0"
+environment:
+    image: "katport/detectron2:10.0"
 # data:
 #   url: https://s3-us-west-2.amazonaws.com/determined-ai-test-data/pytorch_mnist.tar.gz
 hyperparameters:
-  global_batch_size: 16 # 16 per gpu
+  global_batch_size: 128 # 16 per gpu
   model_yaml: mask_rcnn_R_50_FPN_noaug_1x.yaml
   workers: 4
   data_loc: /mnt/dtrain-fsx/detectron2/R-50.pkl
@@ -21,8 +21,9 @@ profiling:
   begin_on_batch: 0
   end_after_batch: 1000000000
 resources:
-    resource_pool: gpu-pool-8-k80s
+    resource_pool: gpu-pool-p3-16xl-1-spot
     shm_size: 8589934592
+    slots_per_trial: 8
 entrypoint: model_def:DetectronTrial
 max_restarts: 0
 bind_mounts:
